feat: usingItem service 수정
graphQL