@@ -1,18 +1,19 @@
 package com.plantify.item.service.usingItem;
 
-import com.plantify.item.domain.dto.request.UsingItemUserRequest;
-import com.plantify.item.domain.dto.response.UsingItemUserResponse;
+import com.plantify.item.domain.dto.UsingItemOutput;
 import com.plantify.item.domain.entity.MyItem;
 import com.plantify.item.domain.entity.UsingItem;
 import com.plantify.item.global.exception.ApplicationException;
 import com.plantify.item.global.exception.errorcode.ItemErrorCode;
+import com.plantify.item.domain.dto.UsingItemActionInput;
 import com.plantify.item.repository.MyItemRepository;
 import com.plantify.item.repository.UsingItemRepository;
-import com.plantify.item.util.UserInfoProvider;
+import com.plantify.item.global.util.UserInfoProvider;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
@@ -24,44 +25,61 @@ public class UsingItemUserServiceImpl implements UsingItemUserService {
     private final UserInfoProvider userInfoProvider;
 
     @Override
-    public List<UsingItemUserResponse> getAllUsingItemsByUser() {
+    public List<UsingItemOutput> getAllUsingItemsByUser() {
         Long userId = userInfoProvider.getUserInfo().userId();
         return usingItemRepository.findByUserId(userId)
                 .stream()
-                .map(UsingItemUserResponse::from)
-                .collect(Collectors.toList());
+                .map(UsingItemOutput::from)
+                .toList();
     }
 
     @Override
-    public UsingItemUserResponse createUsingItem(UsingItemUserRequest request) {
-        MyItem myItem = myItemRepository.findById(request.myItemId())
-                .orElseThrow(() -> new ApplicationException(ItemErrorCode.ITEM_NOT_FOUND));
-
-        UsingItem usingItem = request.toEntity(myItem);
-        UsingItem savedItem = usingItemRepository.save(usingItem);
-
-        return UsingItemUserResponse.from(savedItem);
+    public List<UsingItemOutput> manageUsingItems(List<UsingItemActionInput> actions) {
+        Long userId = userInfoProvider.getUserInfo().userId();
+        return actions.stream()
+                .map(action -> processAction(action, userId))
+                .filter(Objects::nonNull)
+                .toList();
     }
 
-    @Override
-    public UsingItemUserResponse updateUsingItemPos(Long usingItemId, UsingItemUserRequest request) {
-        UsingItem usingItem = usingItemRepository.findById(usingItemId)
-                .orElseThrow(() -> new ApplicationException(ItemErrorCode.ITEM_NOT_FOUND));
-
-        UsingItem updatedUsingItem = usingItem.toBuilder()
-                .posX(request.posX())
-                .posY(request.posY())
-                .build();
-
-        UsingItem savedUsingItem = usingItemRepository.save(updatedUsingItem);
-        return UsingItemUserResponse.from(savedUsingItem);
+    private UsingItemOutput processAction(UsingItemActionInput action, Long userId) {
+        switch (action.action().toUpperCase()) {
+            case "CREATE":
+                return createUsingItem(action, userId);
+            case "UPDATE":
+                return updateUsingItem(action, userId);
+            case "DELETE":
+                deleteUsingItem(action, userId);
+                return null;
+            default:
+                throw new IllegalArgumentException("Invalid action type: " + action.action());
+        }
     }
 
-    @Override
-    public void deleteUsingItem(Long usingItemId) {
-        UsingItem usingItem = usingItemRepository.findById(usingItemId)
+    private UsingItemOutput createUsingItem(UsingItemActionInput action, Long userId) {
+        MyItem myItem = myItemRepository.findMyItemByMyItemIdAndUserId(action.myItemId(), userId)
                 .orElseThrow(() -> new ApplicationException(ItemErrorCode.ITEM_NOT_FOUND));
 
-        usingItemRepository.delete(usingItem);
+        UsingItem newUsingItem = action.CreateUsingItem(myItem);
+        return UsingItemOutput.from(usingItemRepository.save(newUsingItem));
+    }
+
+    private UsingItemOutput updateUsingItem(UsingItemActionInput action, Long userId) {
+        UsingItem usingItem = usingItemRepository.findByUsingItemIdAndUserId(action.usingItemId(), userId)
+                .orElseThrow(() -> new ApplicationException(ItemErrorCode.ITEM_NOT_FOUND));
+
+        UsingItem updatedUsingItem = action.UpdateUsingItem(usingItem);
+        return UsingItemOutput.from(usingItemRepository.save(updatedUsingItem));
+    }
+
+    private void deleteUsingItem(UsingItemActionInput action, Long userId) {
+        if (action.usingItemId() == null) {
+            throw new IllegalArgumentException("UsingItem이 null입니다.");
+        }
+
+        usingItemRepository.findByUsingItemIdAndUserId(action.usingItemId(), userId)
+                .orElseThrow(() -> new ApplicationException(ItemErrorCode.ITEM_NOT_FOUND));
+
+        usingItemRepository.deleteById(action.usingItemId());
     }
 }
